# TCFDS

./: .gitignore  CLAUDE.md  LICENSE  README.md  TASK_BACKLOG.md  final_report.md  pyproject.toml  requirements.txt  tcfds.py  tcfds_log.txt
.Jules/: palette.md
.jules/: bolt.md  sentinel.md
examples/: test_load.py
paper/: tcfds_paper.tex
scripts/: verify.py
tests/: test_logic_review.py
